fix: Incorrect counts shown for alloy smelting in JEI